--- a/src/main/webapp/res/css/admin/admin_home.css
+++ b/src/main/webapp/res/css/admin/admin_home.css
@@ -1,6 +1,6 @@
-html,body,#div_home_main{
+div_home_mainhtml,body,#div_home_main{
     width: 100%;
-    height: 100%;
+    height: 150%;
 }
 #div_home_main{
     min-width: 1000px;
